--- a/interface/design.ui
+++ b/interface/design.ui
@@ -116,19 +116,6 @@
     <string>Data Type</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="lineEditGeneralSearch">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>50</y>
-     <width>411</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="placeholderText">
-    <string>General Search</string>
-   </property>
-  </widget>
   <widget class="QTableView" name="dataTableSelected">
    <property name="geometry">
     <rect>
@@ -175,6 +162,9 @@
    <property name="sortingEnabled">
     <bool>false</bool>
    </property>
+   <attribute name="horizontalHeaderStretchLastSection">
+    <bool>true</bool>
+   </attribute>
    <attribute name="verticalHeaderVisible">
     <bool>true</bool>
    </attribute>
@@ -182,108 +172,130 @@
     <bool>false</bool>
    </attribute>
   </widget>
-  <widget class="QSplitter" name="splitter">
+  <widget class="QPushButton" name="pushButtonExport">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>10</y>
-     <width>190</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <widget class="QLabel" name="label">
-    <property name="text">
-     <string>Genome:</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxGenome">
-    <item>
-     <property name="text">
-      <string>Neues Element</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>bbbbbb</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>jjutr</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>sagege</string>
-     </property>
-    </item>
-   </widget>
-  </widget>
-  <widget class="QSplitter" name="splitter_2">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>10</y>
-     <width>182</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="orientation">
-    <enum>Qt::Horizontal</enum>
-   </property>
-   <widget class="QLabel" name="label_2">
-    <property name="text">
-     <string>Project:</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxProject">
-    <item>
-     <property name="text">
-      <string>Neues Element</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>bbbbbb</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>jjutr</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>sagege</string>
-     </property>
-    </item>
-   </widget>
-  </widget>
-  <widget class="QSplitter" name="splitter_3">
-   <property name="geometry">
-    <rect>
-     <x>470</x>
-     <y>60</y>
+     <x>475</x>
+     <y>103</y>
      <width>86</width>
-     <height>54</height>
+     <height>41</height>
     </rect>
    </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
+   <property name="text">
+    <string>Export</string>
    </property>
-   <widget class="QPushButton" name="pushButtonClear">
+  </widget>
+  <widget class="QLineEdit" name="lineEditGeneralSearch">
+   <property name="geometry">
+    <rect>
+     <x>41</x>
+     <y>51</y>
+     <width>411</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="placeholderText">
+    <string>General Search</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonClear">
+   <property name="geometry">
+    <rect>
+     <x>475</x>
+     <y>51</y>
+     <width>85</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Clear All</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>41</x>
+     <y>18</y>
+     <width>61</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Genome:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxGenome">
+   <property name="geometry">
+    <rect>
+     <x>108</x>
+     <y>13</y>
+     <width>133</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <item>
     <property name="text">
-     <string>Clear All</string>
+     <string>Neues Element</string>
     </property>
-   </widget>
-   <widget class="QPushButton" name="buttonDownload">
+   </item>
+   <item>
     <property name="text">
-     <string>Download</string>
+     <string>bbbbbb</string>
     </property>
-   </widget>
+   </item>
+   <item>
+    <property name="text">
+     <string>jjutr</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>sagege</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>261</x>
+     <y>18</y>
+     <width>53</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Project:</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxProject">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>13</y>
+     <width>133</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <item>
+    <property name="text">
+     <string>Neues Element</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>bbbbbb</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>jjutr</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>sagege</string>
+    </property>
+   </item>
   </widget>
  </widget>
  <resources/>
